--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,6 +5,7 @@
     --color-grey-light-3: #CCCCCC;
     --color-grey-dark-1: #777;
     --color-grey-dark-2: #333;
+    --color-black: #000;
 
     --color-pink: #FEA8A9;
     --color-purple-dark: #400E72;
