--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,18 +1,36 @@
 .header {
-    height: 7rem;
+    height: 10rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    // border: var(--line);
+
+    margin-top: -6rem;
+    margin-bottom: 1rem;
 
     &__nav {
         font-weight: 700;
         font-size: 1.6rem;
-        color: black;
+        width: 50rem;
+
+        .top-nav {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+
+            list-style: none;
+
+            &__link:link,
+            &__link:visited {
+                color: var(--color-black);
+                text-decoration: none;
+                text-transform: uppercase;
+            }
+        }
     }
 
     &__logo {
-        height: 5rem;
+        height: 7rem;
+        padding-bottom: 1rem;
     }
 }
