--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -2,20 +2,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--color-off-white);
 }
 
 .container {
-    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     width: 90vw;
     height: 100vh;
 }
 
 .content {
-    // flex: 1;
-    height: 90%;
+    background-color: #FFF;
+    height: 80%;
     width: 100%;
-    box-shadow: var(--shadow-light);
     overflow-y: scroll;
+    box-shadow: var(--shadow-dark);
 }
 
 .main-content {
